<resources>
    <string name="facebook_app_id" translatable="false">2027882067320201</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2027882067320201</string>
    <string name="stripe_publish_key" translatable="false">pk_test_RjJFXdLkbesQpjm6T2xPddmp</string>
    <string name="admob_banner_ads_key" translatable="false">ca-app-pub-8907881762519005/9824832324</string>
    <string name="google_map_api_key" translatable="false">AIzaSyAl0EO1puEM6Bjtf85tSFILCFKj7THi17M</string>
    <string name="adview_publisher_key" translatable="false">pub-8907881762519005</string>
    <string name="floating_button_behaviour" translatable="false">com.panaceasoft.pscity.utils.ScrollAwareFABBehavior</string>
    <string name="history__title">History</string>
    <string name="title__activity_user_history_list">UserHistoryListActivity</string>
    <string name="favourite__title">Favourites</string>
    <string name="fb_register__welcome">Welcome from %1$s </string>
    <string name="fb_register__desc">Please login to use all features of application.</string>
    <string name="gallery__title">Gallery</string>
    <string name="gallery_image__gallery">Image Gallery</string>
    <string name="gallery_img__desc">Image Description</string>
    <string name="image_default__image">Default Image</string>
    <string name="app__app_name">TLT</string>
    <string name="app__ok">OK</string>
    <string name="app__cancel">Cancel</string>
    <string name="app__drawer_open">Drawer Open</string>
    <string name="app__drawer_close">Drawer Close</string>
    <string name="menu__fb_login">Facebook Login</string>
    <string name="menu__comment_list">Comment List</string>
    <string name="menu__notification_list">Notification List</string>
    <string name="register__user_name">User Name</string>
    <string name="register__email">Email</string>
    <string name="register__password">Password</string>
    <string name="register__back_to_login">Already member ? Login</string>
    <string name="register__register">Register</string>
    <string name="register__new_account">Register New User Account</string>
    <string name="register__check_option">I agree to this privacy policy?</string>
    <string name="forgot_password__title">Forgot Password</string>
    <string name="forgot_password__email">Email</string>
    <string name="forgot_password__back_to_login">Already a member ? Login</string>
    <string name="forgot_password__password_recovery">Recover Password</string>
    <string name="forgot_password__save">Save</string>
    <string name="forgot_password__send">Send</string>
    <string name="password_change__password">Password</string>
    <string name="password_change__save">Save</string>
    <string name="password_change__confirm_password">Confirm Password</string>
    <string name="password_change__password_change">Password Change</string>
    <string name="login__email">Email</string>
    <string name="login__password">Password</string>
    <string name="login__not_a_member_join_now">New here? Sign Up</string>
    <string name="login__forgot_your_password">Forgot password ?</string>
    <string name="login__login">Sign In</string>
    <string name="login__welcome_title">Welcome To The Local Traveler</string>
    <string name="login__choice_text">OR</string>
    <string name="login__with_phone">Sign In with Phone</string>
    <string name="login__with_google">Sign In with Google</string>
    <string name="contact_us__name">Contact Name</string>
    <string name="contact_us__email">Contact Email</string>
    <string name="contact_us__message">Contact Message</string>
    <string name="contact_us__phone">Contact Phone</string>
    <string name="contact_us__submit">Submit</string>
    <string name="notification_setting__on_off">Notification Setting ( On/Off )</string>
    <string name="notification_setting__latest_message_from_system">Latest Message From System</string>
    <string name="notification__notification">Notification!</string>
    <string name="notification__title">Notification</string>
    <string name="notification_setting__title">Notification Setting</string>
    <string name="notification_detail__title">Notification Detail</string>
    <string name="notification_alert">Alert</string>
    <string name="language__english">English</string>
    <string name="language__arabic">Arabic</string>
    <string name="language__spanish">Spanish</string>
    <string name="language__language_change">Are you sure you w ant to change to %1$s?</string>
    <string name="language__title">Language</string>
    <string name="comment__replies">-- %1$s replies</string>
    <string name="comment__dates">-- %1$s </string>
    <string name="comment__title">Comment List</string>
    <string name="comment__detail_title">Comment Replies</string>
    <string name="comment__empty_comment">No Comments</string>
    <string name="comment__comment">Comment</string>
    <string name="rating__list">Rating List</string>
    <string name="rating__write_review">Write Review</string>
    <string name="rating__total_count">%1$s Customer Reviews</string>
    <string name="rating__total_value">%1$s out of 5 stars</string>
    <string name="rating__total_count_n_value">%1$s out of 5 stars (%2$s Reviews)</string>
    <string name="rating__count">%1$s star</string>
    <string name="rating__percent">%1$s %%</string>
    <string name="rating__in_stock">In Stock</string>
    <string name="rating__title">Title</string>
    <string name="rating__message">Message</string>
    <string name="rating__user_rating">User Rating Entry !</string>
    <string name="rating__your_rating">Your Rating</string>
    <string name="rating__five_star">5 stars</string>
    <string name="rating__four_star">4 stars</string>
    <string name="rating__three_star">3 stars</string>
    <string name="rating__two_star">2 stars</string>
    <string name="rating__one_star">1 star</string>
    <string name="rating__rating_range">Rating Range</string>
    <string name="rating__one">1 and higher</string>
    <string name="rating__two">2 and higher</string>
    <string name="rating__three">3 and higher</string>
    <string name="rating__four">4 and higher</string>
    <string name="rating__five">5 \n</string>
    <string name="rating__comar">","</string>
    <string name="rating_value">rating</string>
    <string name="rating_city_value">rating</string>
    <string name="dialog__title_m_mun">Sorting</string>
    <string name="popular__m_mun">Popular</string>
    <string name="recent__m_mun">Latest</string>
    <string name="char_asc__m_mun">A -> Z</string>
    <string name="char_desc__m_mun">Z -> A</string>
    <string name="edit_setting__notification_setting">Notification Settings</string>
    <string name="edit_setting__edit_profile">Edit Profile</string>
    <string name="edit_setting__logout">Logout</string>
    <string name="edit_setting__logout_question">Are you sure want to logout ? </string>
    <string name="edit_setting__terms_and_conditions">Terms and Conditions</string>
    <string name="edit_setting__app_info">App Info</string>
    <string name="edit_setting__title">Setting</string>
    <string name="message__register_success">Successfully Registered.</string>
    <string name="message__loading">Loading….</string>
    <string name="message__please_wait">Please wait…</string>
    <string name="message__welcome">Welcome to The Local Traveler</string>
    <string name="message__want_to_quit">Do you really want to quit?</string>
    <string name="message__ok_close">OK</string>
    <string name="message__cancel_close">Cancel</string>
    <string name="search__notSet">Not Set</string>
    <string name="search__by_name">Product Name</string>
    <string name="search__by_type">Product Type</string>
    <string name="search__by_sub_type">Sub Product Type</string>
    <string name="search__by_price">Price</string>
    <string name="search__lowest_price">Lowest Price</string>
    <string name="search__highest_price">Highest Price</string>
    <string name="search__special_check">Special Check</string>
    <string name="search__feature">Featured Products</string>
    <string name="search__discount_price">Discount Prices</string>
    <string name="search__search">Search</string>
    <string name="search__title_activity_font_select">FontSelectActivity</string>
    <string name="sf__notSet">Not Set</string>
    <string name="sf__notSet_zg">Not Set</string>
    <string name="sf__ByItemType">Set Location Name</string>
    <string name="sf__ByPrice">Set Price</string>
    <string name="sf__LowestPrice">Lowest Price</string>
    <string name="sf__HighestPrice">Highest Price</string>
    <string name="sf__AdvanceFiltering">Advanced Filtering</string>
    <string name="sf__Feature">Feature Location</string>
    <string name="sf__Discount">Discount Items</string>
    <string name="sf__Filter_Button">Filter</string>
    <string name="typefilter">Filtered By Product type</string>
    <string name="error_message__select_location">Please select location.!</string>
    <string name="error_message__login_first">Please login first!</string>
    <string name="error_message__rating">Please fill completely for rating.</string>
    <string name="error_message__youtube_not_valid">YouTube is not valid.</string>
    <string name="error_message__blank_email">Please input Email.</string>
    <string name="error_message__choose_category">Choose a Category First</string>
    <string name="error_message__insert_value_search">Insert a value to search</string>
    <string name="error_message__order_fail">Process Failed with unknown error! Please try again</string>
    <string name="error_message__blank_contact_message">Please input Contact Message.</string>
    <string name="error_message__blank_password">Please enter the password.</string>
    <string name="error_message__blank_name">Please input name.</string>
    <string name="error_message__blank_keyword">Please input search keyword.</string>
    <string name="error_message__password_not_equal">Passwords do not match!</string>
    <string name="error_message__no_internet">No internet connection.</string>
    <string name="error_message__email_exists">Email Already Exists</string>
    <string name="error_message__image_cannot_upload">Image cannot be Uploaded</string>
    <string name="error_message__item_cannot_upload">Location cannot be Uploaded</string>
    <string name="error_message__code_not_verify">Your code is not verified.</string>
    <string name="error_message__to_check_agreement">You need to agree to privacy policy.</string>
    <string name="Feature_UI_Type__Button">Interest</string>
    <string name="Feature_UI_Tune__Button">Filter &amp; Sort</string>
    <string name="Feature_UI_Sort__Button">Map Filter</string>
    <string name="Feature_UI__item_list_no_item_title">No Data</string>
    <string name="Feature_UI__item_list_no_item_desc">No results! Please try to adjust the filter.</string>
    <string name="Feature_UI__item_list_loading_item_title">We are loading</string>
    <string name="Feature_UI__search_alert_cat_title">Choose Category</string>
    <string name="Feature_UI__search_alert_sub_cat_title">Choose Sub Category</string>
    <string name="menu__home">Home</string>
    <string name="menu__me">Me</string>
    <string name="menu__interest">Interest</string>
    <string name="menu__search">Search</string>
    <string name="menu__item">Explorer</string>
    <string name="item_list_title">Location List</string>
    <string name="dashboard_new_cities">Explore New Destinations</string>
    <string name="image_upload__choose_photo">Choose photo</string>
    <string name="image_upload__upload">UPLOAD</string>
    <string name="message__image_desc">Location description</string>
    <string name="specification__name">Name</string>
    <string name="specification__description">Description</string>
    <string name="specification__edit_save_button">Save</string>
</resources>