<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/baseline_home_orange_24"
        android:title="@string/menu__home"
        app:showAsAction="always|withText"
        />

    <item
        android:id="@+id/explorer_menu"
        android:icon="@drawable/baseline_pin_black_24"
        android:title="@string/menu__item"
        app:showAsAction="always|withText"
        />

    <item
        android:id="@+id/me_menu"
        android:icon="@drawable/baseline_profile_grey_24"
        android:title="@string/menu__me"
        app:showAsAction="always|withText"
        />

    <item
        android:id="@+id/interest_menu"
        android:icon="@drawable/ic_category"
        android:title="@string/menu__interest"
        app:showAsAction="always|withText"
        />

    <item
        android:id="@+id/search_menu"
        android:icon="@drawable/baseline_search_grey_24"
        android:title="@string/menu__search"
        app:showAsAction="always|withText"
        />

</menu>