<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="image"
            type="String"/>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/chooseFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_button_design"
            android:text="@string/image_upload__choose_photo"
            app:font='@{"medium"}'
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/selectedImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            app:imageUrl="@{image}"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descEditText"
            app:srcCompat="@drawable/default_image" />

        <Button
            android:id="@+id/uploadPhotoButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_progress_bar_horizontal"
            android:backgroundTint="@color/global__primary"
            android:text="@string/image_upload__upload"
            android:textColor="@color/md_white_1000"
            app:font='@{"medium"}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/descEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/message__image_desc"
            android:textColor="@color/text__primary"
            android:textSize="@dimen/font_body_size"
            app:font='@{"normal"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseFileButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>