<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="image"
            type="String"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_grey_100">

        <TextView
            android:id="@+id/headerNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/specification__name"
            android:textColor="@color/text__primary"
            android:textSize="@dimen/font_body_size"
            app:font='@{"normal"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/headerNameEditText"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_progress_bar_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/space_8"
            android:textColor="@color/text__primary"
            android:textSize="@dimen/font_body_size"
            app:font='@{"normal"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerNameTextView" />

        <EditText
            android:id="@+id/specificationDescriptionEditText"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_progress_bar_horizontal"
            android:inputType="textMultiLine"
            android:paddingLeft="@dimen/space_8"
            android:gravity="top|left"
            android:textColor="@color/text__primary"
            android:textSize="@dimen/font_body_size"
            app:font='@{"normal"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_progress_bar_horizontal"
            android:backgroundTint="@color/global__primary"
            android:text="@string/specification__edit_save_button"
            android:textColor="@color/md_white_1000"
            app:font='@{"medium"}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/specification__description"
            android:textColor="@color/text__primary"
            android:textSize="@dimen/font_body_size"
            app:font='@{"normal"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerNameEditText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>