<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.panaceasoft.pscity.viewobject.Item"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView12"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:cardCornerRadius="@dimen/space_8"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/image_default__image"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{item.defaultPhoto.imgPath}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/default_image" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/sponsorCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/paid_sponsor_bg">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/baseline_show_sponsor" />

                        <TextView
                            android:id="@+id/addedDateStrTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/paid_sponsor_text_view"
                            android:textSize="@dimen/font_body_s_size"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/imageView5"
                            app:layout_constraintTop_toTopOf="@+id/imageView5"
                            app:layout_constraintVertical_bias="1.0"
                            tools:text="sponsored" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@{item.name}"
            android:textAlignment="viewStart"
            android:textColor="@color/text__primary_dark"
            android:textSize="@dimen/font_title_size"
            app:font='@{"normal"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView12"
            tools:text="@string/item_list_title" />

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{item.city.name}"
            android:textAlignment="viewStart"
            android:textColor="@color/global__primary"
            app:font='@{"normal"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            tools:text="@string/dashboard_new_cities" />

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{item.description}"
            android:textAlignment="viewStart"
            android:textColor="@color/text__primary"
            app:font='@{"normal"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityTextView"
            tools:text="TextView" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            rateByServer="@{item.ratingDetails.totalRatingValue}"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descTextView" />

        <TextView
            android:id="@+id/ratingValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textColor="@color/text__primary"
            app:font='@{"normal"}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/reviewValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="TextView"
            android:textColor="@color/text__primary"
            app:font='@{"normal"}'
            app:layout_constraintStart_toEndOf="@+id/ratingValueTextView"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>